--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Getting Started Example",
+    "name": "Pendo Injector",
     "version": "1.0",
-    "description": "Build an Extension!",
+    "description": "Install Pendo in your browser!",
     "permissions": ["tabs","activeTab","declarativeContent","storage"],
     "background": {
       "scripts": ["background.js"],
@@ -11,18 +11,18 @@
     "page_action": {
       "default_popup": "popup.html",
       "default_icon": {
-        "16": "images/get_started16.png",
-        "32": "images/get_started32.png",
-        "48": "images/get_started48.png",
-        "128": "images/get_started128.png"
+        "16": "images/favicon-16x16.png",
+        "32": "images/favicon-32x32.png",
+        "48": "images/favicon-48.png",
+        "128": "images/favicon-128.png"
         }
     },
 
     "icons": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
+      "16": "images/favicon-16x16.png",
+      "32": "images/favicon-32x32.png",
+      "48": "images/favicon-48.png",
+      "128": "images/favicon-128.png"
     },
     "options_page": "options.html",
 
