--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,22 @@
 {
     "name": "Pendo Injector",
     "short_name": "Inject Pendo",
-    "version": "1.0",
+    "version": "1.3",
     "description": "Install Pendo in your browser!",
-    "permissions": ["tabs","activeTab","declarativeContent","storage"],
+    "permissions": ["tabs","activeTab","declarativeContent","storage","webRequest","webRequestBlocking","browsingData","http://*/*","https://*/*"],
     "background": {
       "scripts": ["background.js"],
-      "persistent": false
+      "persistent": true
     },
 
-    "page_action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "images/favicon-16x16.png",
-        "32": "images/favicon-32x32.png",
-        "48": "images/favicon-48.png",
-        "128": "images/favicon-128.png"
-        }
+    "browser_action": {
+    "default_title": "Pendo is not running on this page",
+    "default_icon": {
+      "16": "images/icon38-off.png"
+      }
     },
 
     "icons": {
-      "16": "images/favicon-16x16.png",
       "32": "images/favicon-32x32.png",
       "48": "images/favicon-48.png",
       "128": "images/favicon-128.png"
@@ -32,10 +28,8 @@
         "js": ["content.js"]
     }],
 
-    "manifest_version": 2,
+    "web_accessible_resources": ["script.js"],
 
-    "web_accessible_resources": ["script.js"]
-
-
+    "manifest_version": 2
 
 }
