--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
     "options_page": "options.html",
 
     "content_scripts": [ {
-        "matches": ["https://*/*"],
+        "matches": ["https://*/*","http://localhost/*"],
         "js": ["content.js"]
     }],
 
