--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Pendo Injector V2",
+	"name": "Pendo Injector",
     "short_name": "Inject Pendo",
     "version": "2.0",
     "description": "Install Pendo in your browser!",
